--- a/static/css/logo.css
+++ b/static/css/logo.css
@@ -1,6 +1,6 @@
 .logo img { /* TODO: This is the selector that we want to use */
     width: 40px;
-    height: fit-content;
+    height: 45px;
 
     user-select: none;
 }
